--- a/Languages/English.ini
+++ b/Languages/English.ini
@@ -114,8 +114,8 @@ Sure_Delete_Building_Info=Are you 100% sure you want to delete Building informat
 YES_NO=YES|NO
 [MBR Func_AtkLogHead]
 AtkLogHead_Text_01=ATTACK LOG
-AtkLogHead_Text_02=|                  --------  LOOT --------       ----- BONUS ------
-AtkLogHead_Text_03=|TIME|TROP.|SEARCH|   GOLD| ELIXIR|DARK EL|TR.|S|  GOLD|ELIXIR|  DE|L.
+AtkLogHead_Text_02=|                                 ---- LOOT ---- ---- BONUS ----
+AtkLogHead_Text_03=TIME |TROP|SRC|TH|TR|[%]|TR.|S|GOLD|ELIX|  DE|GOLD|ELIX|  DE|L.|Account
 [MBR Func_Village_Upgrade]
 BtnResetLabUpgradeTime_Info_01=Visible Red button means that laboratory upgrade in process
 BtnResetLabUpgradeTime_Info_02=This will automatically disappear when near time for upgrade to be completed.
@@ -625,6 +625,7 @@ BtnAtkLogClear=Clear Atk. Log
 BtnAtkLogClear_Info_01=Use this to clear the Attack Log.
 BtnAtkLogCopyClipboard=Copy to Clipboard
 BtnAtkLogCopyClipboard_Info_01=Use this to copy the Attack Log to the Clipboard (CTRL+C)
+BtnAttack=Attack
 CmbLogDividerOption_Item_01=Use Divider to Resize Both Logs
 CmbLogDividerOption_Item_02=Bot and Attack Log Same Size
 CmbLogDividerOption_Item_03=Large Bot Log, Small Attack Log
@@ -1182,6 +1183,7 @@ TxtTreasuryGold_Info_01=Minimum Gold Storage amount to collect Treasury.
 TxtTreasuryGold_Info_02=Set same as Resume Attack values to collect when 'out of gold' error
 TxtTreasuryGold_Info_03=happens while searching for attack
 [MBR GUI Design Child Bot - Options]
+Auto Hide Emulator=Auto hide emulator after start
 ChkAutoAlign=Auto Align
 ChkAutoAlign_Info_01=Reposition/Align Android Emulator and BOT windows on the screen.
 ChkAutoResume=Auto resume Bot after
@@ -1818,3 +1820,46 @@ BtnPlayStoreGame=Clash of Clans
 BtnPlayStoreNovaLauncher=Nova Launcher
 Group_03=Android Control
 Group_04=Install Play Store Apps
+[109]
+4=Switch Account Mode
+5=Enable Switch Account
+6=Switch to another account & profile when troop training time is >= 1 minutes
+7=This function supports maximum 8 CoC accounts & 8 Bot profiles
+8=Make sure to create sufficient Profiles equal to number of CoC Accounts
+13=Total CoC Acc:
+14=Choose number of CoC Accounts pre-logged
+15=Normal switch
+16=Switching accounts continously
+17=Smart switch
+18=Switch to account with the shortest remain training time
+19=Force switch after:
+20=Force the Bot to switch account when searching for too long
+21=First switch to all donate accounts
+22=Then switch to another active account if its army is ready
+23=searches
+24=Stay on donation while training
+25=Stay at donate account until an active account is getting troops ready in 1 minute
+26=Circulate among the donate accounts if there are more than 1
+27=Combo Sleep after Switch Acc.
+28=Close CoC combo with Switch Account when there is more than 3 mins remaining on training time of all accounts.
+29=Close CoC
+30=Close Android
+31=Manually locate account coordinates
+32=Select CoC Account to manually locate its y-coordinate
+33=Locate
+34=Starting locate your CoC Account
+35=Clear All
+36=Clear location data of all accounts
+37=Profiles
+38=Update Profiles
+39=Clear Profiles
+40=No.
+41=Profile Name
+42=Acc.
+43=Bot Type
+44=Village Name
+45=Select the index of CoC Account to match with this Profile
+46=Define the botting type of this profile
+47=Active
+48=Donate
+49=Idle
