Fancy Attack Log With Damage Percentage And Few Extra Info

--- a/Languages/English.ini
+++ b/Languages/English.ini
@@ -118,8 +118,8 @@ Sure_Delete_Building_Info=Are you 100% sure you want to delete Building informat
 YES_NO=YES|NO
 [MBR Func_AtkLogHead]
 AtkLogHead_Text_01=ATTACK LOG
-AtkLogHead_Text_02=|                  --------  LOOT --------       ----- BONUS ------
-AtkLogHead_Text_03=|TIME|TROP.|SEARCH|   GOLD| ELIXIR|DARK EL|TR.|S|  GOLD|ELIXIR|  DE|L.
+AtkLogHead_Text_02=|                                 ---- LOOT ---- ---- BONUS ----
+AtkLogHead_Text_03=TIME |TROP|SRC|TH|TR|[%]|TR.|S|GOLD|ELIX|  DE|GOLD|ELIX|  DE|L.|Account
 [MBR Func_Village_Upgrade]
 BtnResetLabUpgradeTime_Info_01=Visible Red button means that laboratory upgrade in process
 BtnResetLabUpgradeTime_Info_02=This will automatically disappear when near time for upgrade to be completed.
@@ -636,6 +636,7 @@ BtnAtkLogClear=Clear Atk. Log
 BtnAtkLogClear_Info_01=Use this to clear the Attack Log.
 BtnAtkLogCopyClipboard=Copy to Clipboard
 BtnAtkLogCopyClipboard_Info_01=Use this to copy the Attack Log to the Clipboard (CTRL+C)
+BtnAttack=Attack
 CmbLogDividerOption_Item_01=Use Divider to Resize Both Logs
 CmbLogDividerOption_Item_02=Bot and Attack Log Same Size
 CmbLogDividerOption_Item_03=Large Bot Log, Small Attack Log
@@ -1191,6 +1192,7 @@ TxtTreasuryGold_Info_01=Minimum Gold Storage amount to collect Treasury.
 TxtTreasuryGold_Info_02=Set same as Resume Attack values to collect when 'out of gold' error
 TxtTreasuryGold_Info_03=happens while searching for attack
 [MBR GUI Design Child Bot - Options]
+Auto Hide Emulator=Auto hide emulator after start
 ChkAutoAlign=Auto Align
 ChkAutoAlign_Info_01=Reposition/Align Android Emulator and BOT windows on the screen.
 ChkAutoResume=Auto resume Bot after
