Auto Upgrade By Roro

--- a/Languages/English.ini
+++ b/Languages/English.ini
@@ -88,7 +88,7 @@ MyVillage=MyVillage
 Notice=Notice
 Ok=Ok
 Ok_Cancel=Ok|Cancel
-OK_to_restart_bot=Click OK to restart bot,
+OK_to_restart_bot=Click OK to restart bot, 
 Profile_Already_Exists_01=Profile Already Exists
 Profile_Already_Exists_02=%s already exists.\r\nPlease choose another name for your profile.
 Profile_Already_Exists_03=already exists.
@@ -115,7 +115,7 @@ YES_NO=YES|NO
 [MBR Func_AtkLogHead]
 AtkLogHead_Text_01=ATTACK LOG
 AtkLogHead_Text_02=|                                 ---- LOOT ---- ---- BONUS ----
-AtkLogHead_Text_03=|TIME |TROP|SRC|CLOUD|TH|TR|[%]|TR.|S|GOLD|ELIX|  DE|GOLD|ELIX|  DE|L.
+AtkLogHead_Text_03=|TIME |TROP|SRC|CLOUD|TH|TR|[%]|TR.|S|GOLD|ELIX|  DE|GOLD|ELIX|  DE|L.|Account
 [MBR Func_Village_Upgrade]
 BtnResetLabUpgradeTime_Info_01=Visible Red button means that laboratory upgrade in process
 BtnResetLabUpgradeTime_Info_02=This will automatically disappear when near time for upgrade to be completed.
@@ -197,6 +197,7 @@ Tab_02_STab_03_STab_01=Laboratory
 Tab_02_STab_03_STab_02=Heroes
 Tab_02_STab_03_STab_03=Buildings
 Tab_02_STab_03_STab_04=Walls
+Tab_02_STab_03_STab_05=Auto Upgrade
 Tab_02_STab_04=Achievements
 Tab_02_STab_05=Notify
 Tab_02_STab_05_STab_01=PushBullet/Telegram
@@ -1820,6 +1821,26 @@ BtnPlayStoreGame=Clash of Clans
 BtnPlayStoreNovaLauncher=Nova Launcher
 Group_03=Android Control
 Group_04=Install Play Store Apps
+[MOD GUI Design - AutoUpgrade]
+AutoUpgradeLog=------------------------------------------------ AUTO UPGRADE LOG ------------------------------------------------
+chkAutoUpgrade=Enable Auto Upgrade
+chkAutoUpgrade_Info_01=Check box to enable automatically starting Upgrades from builders menu
+Group_01=Auto Upgrade
+Group_02=Upgrades to ignore
+Ignore_01=Ignore Gold Upgrades
+Ignore_02=Ignore Elixir Upgrades
+Ignore_03=Ignore Dark Elixir Upgrades
+Label_01=Save
+Label_02=after launching upgrade
+MsgBox_01=Warning about your settings...
+MsgBox_02=Warning ! You selected 2 resources to ignore... That can be a problem,
+MsgBox_03=and Auto Upgrade can be ineffective, by not launching any upgrade...
+MsgBox_04=I recommend you to select only one resource, not more...
+MsgBox_05=Invalid settings...
+MsgBox_06=Warning ! You selected 3 resources to ignore... And you can't...
+MsgBox_07=With your settings, Auto Upgrade will be completely ineffective
+MsgBox_08=and will not launch any upgrade... You must deselect one or more
+MsgBox_09=ignored resource.
 [109]
 4=Switch Account Mode
 5=Enable Switch Account
