--- a/Languages/English.ini
+++ b/Languages/English.ini
@@ -119,7 +119,7 @@ YES_NO=YES|NO
 [MBR Func_AtkLogHead]
 AtkLogHead_Text_01=ATTACK LOG
 AtkLogHead_Text_02=|                                 ---- LOOT ---- ---- BONUS ----
-AtkLogHead_Text_03=|TIME |TROP|SRC|CLOUD|TH|TR|[%]|TR.|S|GOLD|ELIX|  DE|GOLD|ELIX|  DE|L.
+AtkLogHead_Text_03=|TIME |TROP|SRC|CLOUD|TH|TR|[%]|TR.|S|GOLD|ELIX|  DE|GOLD|ELIX|  DE|L.|Account
 [MBR Func_Village_Upgrade]
 BtnResetLabUpgradeTime_Info_01=Visible Red button means that laboratory upgrade in process
 BtnResetLabUpgradeTime_Info_02=This will automatically disappear when near time for upgrade to be completed.
